[gd_scene load_steps=8 format=2]

[ext_resource path="res://ui/theme/gdscript_app_theme.tres" type="Theme" id=1]
[ext_resource path="res://ui/components/OutputConsole.gd" type="Script" id=2]
[ext_resource path="res://ui/theme/fonts/font_title_small.tres" type="DynamicFont" id=3]
[ext_resource path="res://ui/components/popups/ExternalErrorPopup.tscn" type="PackedScene" id=4]
[ext_resource path="res://ui/components/popups/ErrorOverlayPopup.tscn" type="PackedScene" id=5]
[ext_resource path="res://ui/theme/panel_normal.tres" type="StyleBox" id=6]
[ext_resource path="res://addons/SmoothScroll/SmoothScrollContainer.gd" type="Script" id=7]

[node name="OutputConsole" type="PanelContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_vertical = 3
theme = ExtResource( 1 )
script = ExtResource( 2 )

[node name="Panel" type="Panel" parent="."]
margin_right = 1920.0
margin_bottom = 1080.0
custom_styles/panel = ExtResource( 6 )

[node name="MarginContainer" type="MarginContainer" parent="."]
margin_right = 1920.0
margin_bottom = 1080.0
rect_clip_content = true
custom_constants/margin_right = 16
custom_constants/margin_top = 16
custom_constants/margin_left = 16
custom_constants/margin_bottom = 16

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
margin_left = 16.0
margin_top = 16.0
margin_right = 1904.0
margin_bottom = 1064.0

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer"]
margin_right = 1888.0
margin_bottom = 26.0
custom_colors/font_color = Color( 0.572549, 0.560784, 0.721569, 1 )
custom_fonts/font = ExtResource( 3 )
text = "Output"

[node name="ScrollContainer" type="ScrollContainer" parent="MarginContainer/VBoxContainer"]
margin_top = 42.0
margin_right = 1888.0
margin_bottom = 1048.0
size_flags_vertical = 3
scroll_horizontal_enabled = false
script = ExtResource( 7 )

[node name="MessageList" type="VBoxContainer" parent="MarginContainer/VBoxContainer/ScrollContainer"]
margin_right = 1888.0
margin_bottom = 1006.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="ErrorPopup" type="ColorRect" parent="."]
visible = false
margin_right = 1920.0
margin_bottom = 1080.0
color = Color( 0.0352941, 0.0392157, 0.129412, 0.313726 )

[node name="ErrorOverlayPopup" parent="ErrorPopup" instance=ExtResource( 5 )]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -290.0
margin_top = -181.0
margin_right = 290.0
margin_bottom = 181.0
grow_horizontal = 2
grow_vertical = 2
exclusive = true

[node name="ExternalErrorPopup" parent="." instance=ExtResource( 4 )]
visible = false
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 1920.0
margin_bottom = 1080.0
